--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Triviosa</title>
+  
+  <!-- Foundation CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css">
+  
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/assets/css/jass.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Triviosa!</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
+  <div class="grid-container flex-column justify-space-around">
+    <header class="grid-x align-center">
+      <div class="cell">
+        <h1>
+          <span role="img" aria-label="money">💸</span>
+          <a href="/">Triviosa!</a>
+        </h1>
+        <nav>
+          <!-- Conditionally render login or logout links -->
+          {{#if logged_in}}
+          <a href="/profile">Profile</a> |
+          <button class="no-button" id="logout">Logout</button>
+          {{else}}
+          <a href="/login">Login</a>
+          {{/if}}
+        </nav>
+      </div>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="grid-container mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
     <footer>
-      
+      <!-- Footer content -->
     </footer>
   </div>
 
+  <!-- Foundation JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"></script>
+  <script>
+      $(document).foundation();
+  </script>
+
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+  <script src="/assets/js/logout.js"></script>
   {{/if}}
-</body>
 
+  <!-- Custom JavaScript -->
+  <script src="/assets/js/choice.js"></script>
+  <script src="/assets/js/quiz.js"></script>
+</body>
 </html>
