--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
   <!-- Quiz form -->
   <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
     <div class="cell medium-6 medium-offset-3">
-      <h2>Crafter</h2>
+      <h2>Trivia Crafter</h2>
       
       <label for="categories">Categories
         <select name="categories" id="categories" class="input-group-field">
