--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Triviosa</title>
+
+  <!--googlefonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   
   <!-- Foundation CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css">
@@ -17,7 +22,7 @@
   <div class="grid-container flex-column justify-space-around">
     <header class="grid-x align-center">
       <div class="cell">
-        <h1>
+        <h1 class="pacifico-regualr">
            <span role="img" aria-label="money">💸</span>
           <a href="/">Triviosa!</a>
         </h1>
