signup and login implemented

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -52,4 +52,14 @@
       <button id="cancelExit" class="button secondary">No</button>
     </div>
   </div>
-</div>
+</div>;
+
+ <footer>
+        <div class="socialMedia">
+            <p class="follow">Follow Us</p>
+            <a href="https://github.com/drsaho"><i class="li-github"></i>Amadou</a>
+            <a href="https://github.com/barand14"><i class="li-github"></i> Balalomba</a>
+            <a href="https://github.com/EnduringTimes"><i class="li-github"></i> Menes</a>
+            
+        </div>
+    </footer>
