--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
             <div class="card-body" style="font-size: 20px;">
                 <label for="email-login">username:</label>
                 <div style="margin-bottom: 20px; margin-top: 20px">
-                    <input type="text" id="username-login" style="width: 100%" />
+                    <input type="text" id="email-login" style="width: 100%" />
                 </div>
                 <label for="password-login">password:</label>
                 <div style="margin-bottom: 20px; margin-top: 20px">
@@ -30,4 +30,4 @@
         </div>
     </form>
 </div>
-<script src="../js/login.js"></script>
+<script src="/assets/js/login.js"></script>
