--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,22 +8,29 @@
         margin-bottom: 10px;
         font-size: 20px;
       ">
-                <p>Signup</p>
+                <p>Sign Up</p>
             </div>
             <div class="card-body" style="font-size: 20px;">
-                <label for="username-signup">Username:</label>
+                <label for="name-login">username:</label>
                 <div style="margin-bottom: 20px; margin-top: 20px">
                     <input type="text" id="username-signup" style="width: 100%" />
                 </div>
-                <label for="password-signup">Password:</label>
+                 <label for="email-login">email:</label>
+                <div style="margin-bottom: 20px; margin-top: 20px">
+                    <input type="text" id="email-signup" style="width: 100%" />
+                </div>
+                <label for="password-login">password:</label>
                 <div style="margin-bottom: 20px; margin-top: 20px">
                     <input type="password" id="password-signup" style="width: 100%" />
                 </div>
                 <div>
-                    <button style="width: 100%;" type="submit">Signup</button>
+                    <button style="width: 100%;" type="submit">Sing Up</button>
+                    <div id="signup-action">
+                        <a href="/login" style="color: black; text-decoration:none">Login</a>
+                    </div>
                 </div>
             </div>
         </div>
     </form>
 </div>
-<script src="../js/signup.js"></script>
+<script src="/assets/js/signup.js"></script>
