added more styling

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -46,7 +46,7 @@
   <!-- Exit confirmation modal -->
   <div id="exitConfirmationModal" class="exit-modal" style="display:none;">
     <div class="modal-content">
-      <h3>Exit Quiz</h3>
+      <h3 id="exitConfirm">Exit Quiz</h3>
       <p>Are you sure you want to exit the quiz?</p>
       <button id="confirmExit" class="button alert">Yes</button>
       <button id="cancelExit" class="button secondary">No</button>
