--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,33 +27,46 @@ body{
 
 .pacifico-regular {
     font-family: "Pacifico", cursive;
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
   }
   
 
 label[for] {
     font-weight: bold;
-    font-size: 60px;
-    font-family: "Pacifico", cursive;
+    font-size: 40px;
+    font-family: "DM Sans", sans-serif;
     color: #ffffff;
     display: block;
     margin-bottom: 2px;
     text-align: center;
 }
 
+/**#categories{
+    background-image: url('/assets/2.png');
+}
+
+#type{
+    background-image: url('/assets/exitbg2.png');
+}
+
+#categories{
+    background-image: url('/assets/222.png');
+}
+*/
 
 .input-group-field{
     font-size: 40px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "DM Sans", sans-serif;
+    font-weight: bolder;
     align-items: center;
     height: 70px;
-    border:solid 1px rgb(255, 255, 255);
-    box-shadow: 5px 6px 73px 1px rgba(255,191,0,1);
+    border:solid 1px rgb(255, 255, 255);    
+    box-shadow: -2px 1px 18px 0px rgba(255,191,0,1);
     outline: 0;
-    color:#555;
-    border-radius: 50px;
+    color:#000000;
+    border-radius: 40px;
 }
 .question {
     font-size: 1em;
@@ -62,13 +75,14 @@ label[for] {
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: var(--tertiary-color);
+    
 }
 
 .question-style {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Pacifico", cursive;
     color: var(--primary-color);
 }
 
@@ -76,12 +90,20 @@ label[for] {
     font-size: 200px;
     text-align: center;
 }
-h1, h2{
+h1 {
     color: var(--quaternary-color);
     text-align: center;
     font-size: 70px;
     font-family: "Pacifico", cursive;
 }
+h2 {
+    color: var(--quaternary-color);
+    text-align: center;
+    font-size: 100px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
 
  h3, h4, h5, h6 {
     color: var(--primary-color);
@@ -101,6 +123,10 @@ h1, h2{
 
 }
 
+
+
+
+
 select{
     background-color: var(--inputFieldColor);
     border: 3px solid var(black);
@@ -118,12 +144,15 @@ select:hover{
 }
 
 .answer-item {
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom: 30px;
+    padding: 30px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1rem;
-    font-weight: 500;
+    border-radius: 50px;
+    font-size: 40px;
+    text-align: center;
+    font-family: "DM Sans", sans-serif;
+    font-weight: bold;
     background-color: var(--secondary-color);
     color: var(--quaternary-color);
 }
@@ -132,6 +161,7 @@ select:hover{
     background-color: var(--hover-color);
     color: var(--quaternary-color);
 }
+
 
 .answer-item.correct {
     background-color: var(--correct-color);
@@ -179,6 +209,7 @@ select:hover{
     transform: translate(-50%, -50%);
     width: 80%;
     max-width: 600px;
+    height: 600px;
     background-image: url('/assets/formbg.png');
     background-color: var(--primary-color);
     padding: 20px;
@@ -186,8 +217,18 @@ select:hover{
     z-index: 1100;
     border-radius: 5px;
     overflow-y: auto;
-    max-height: 80vh;
+    /**max-height: 100vh;**/
     color: var(--quaternary-color);
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: ;
+}
+
+#exitConfirm {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    font-weight: bold;
 }
 
 .exit-modal {
@@ -201,7 +242,8 @@ select:hover{
     width: 80%;
     height: 80%;
     max-width: 600px;
-    background-color: rgb(154, 0, 51);
+    background-image: url('/assets/exitbg2.png');
+    background-size: cover;
     padding: 20px;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
     z-index: 1100;
@@ -221,12 +263,14 @@ select:hover{
 }
 
 .button {
-    margin-top: 10px;
+    font-weight: bolder;
+    font-size: 50px;
+    margin-top: 20px;
     background-color: var(--secondary-color);
     color: var(--quaternary-color);
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 30px 40px;
+    border-radius: 40px;
     cursor: pointer;
 }
 
