--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,18 @@
-<h2>PROFILE!!!!!!!</h2>
+<body>
+  <div class="grid-container">
+    <h1 id="quizTitle" class="text-center">Triviosa!</h1>
 
-{{#each users}}
-<h2>{{name}}</h2>
-<h2>{{email}}</h2>
-{{/each}}
+    <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
+      </form>
+  
+    <h1 id="quizTitle"><a href="#quiztitle">Triviosa!</h1>
+    
+    {{#each users}}
+      <h2>{{name}}</h2>
+      <h2>{{email}}</h2>
+    {{/each}}
+  </div>
+
+  <footer>
+    </footer>
+</body>
