--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -54,14 +54,18 @@
       </div>
     </div>
   </div>
-
+     
   <footer>
+    <h2 id="profileSection"><a href="#profileSection">PROFILE</a></h2>
     <div class="socialMedia">
       <p class="follow">Follow Us</p>
       <a href="https://github.com/drsaho"><i class="li-github"></i>Amadou</a>
       <a href="https://github.com/barand14"><i class="li-github"></i>Balalomba</a>
       <a href="https://github.com/EnduringTimes"><i class="li-github"></i>Menes</a>
+      <p>&copy; 2024 Triviosa. All rights reserved.</p>
     </div>
   </footer>
   
 </body>
+
+  <script>src="https://cdn.jsdelivr.net/npm/jquery@3."
