--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,32 @@
-<h2>This is the login page</h2>
-<div style="justify-content: center; width:90%; height:100%; margin:auto; justify-content:center; border:solid">
+<h2>Triviosa!</h2>
+<div style="justify-content: center; width:100%; height:10px; margin:auto; justify-content:center; ">
     <form class="login-form">
-        <div class="card" style="background-color: #6f7e83;">
+        <div class="card" style=
+        "background-color: #6f7e83;
+        text-align: center;
+            background-image: url('/assets/patterns1.png');
+            color: white;
+            margin-bottom: 10px;
+            font-size: 5px;
+
+        ">
+
             <div class="card-header" style="
-        background-color: rgb(97, 195, 210);
-        color: white;
-        padding: 10px;
-        margin-bottom: 10px;
-        font-size: 20px;
+            text-align: center;
+            background-image: url('/assets/exitbg.png');
+            color: white;
+            margin-bottom: 1px;
+            font-size: 20px;
       ">
                 <p>Login</p>
             </div>
-            <div class="card-body" style="font-size: 20px;">
+            <div class="card-body" style="font-size: 5px;">
                 <label for="email-login">username:</label>
-                <div style="margin-bottom: 20px; margin-top: 20px">
+                <div style="margin-bottom: 5px; margin-top: 5px">
                     <input type="text" id="email-login" style="width: 100%" />
                 </div>
                 <label for="password-login">password:</label>
-                <div style="margin-bottom: 20px; margin-top: 20px">
+                <div style="margin-bottom: 5px; margin-top: 5px">
                     <input type="password" id="password-login" style="width: 100%" />
                 </div>
                 <div>
