--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{!< main}} <!-- Extend the main layout -->
-<body>
+
   <div class="grid-container">
-    <h1 id="quizTitle" class="text-center">Triviosa!</h1>
+    
 
     <!-- Quiz form -->
     <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
@@ -44,23 +44,6 @@
       <!-- Quiz content will be dynamically added here -->
     </div>
 
-<<<<<<< HEAD
-  <!-- Overlay for darkening background -->
-  <div id="overlay" class="overlay" style="display:none;"></div>
-
-  <!-- Quiz modal where questions and results will be displayed -->
-  <div id="quizContainer" class="quiz-modal" style="display:none;">
-    <!-- Quiz content will be dynamically added here -->
-  </div>
-
-  <!-- Exit confirmation modal -->
-  <div id="exitConfirmationModal" class="exit-modal" style="display:none;">
-    <div class="modal-content">
-      <h3 id="exitConfirm">Exit Quiz</h3>
-      <p>Are you sure you want to exit the quiz?</p>
-      <button id="confirmExit" class="button alert">Yes</button>
-      <button id="cancelExit" class="button secondary">No</button>
-=======
     <!-- Exit confirmation modal -->
     <div id="exitConfirmationModal" class="exit-modal" style="display:none;">
       <div class="modal-content">
@@ -69,17 +52,20 @@
         <button id="confirmExit" class="button alert">Yes</button>
         <button id="cancelExit" class="button secondary">No</button>
       </div>
->>>>>>> 8b450583debb9e45b4f777147b296008547e3278
     </div>
   </div>
-
+     
   <footer>
+    <h2 id="profileSection"><a href="#profileSection">PROFILE</a></h2>
     <div class="socialMedia">
       <p class="follow">Follow Us</p>
       <a href="https://github.com/drsaho"><i class="li-github"></i>Amadou</a>
       <a href="https://github.com/barand14"><i class="li-github"></i>Balalomba</a>
       <a href="https://github.com/EnduringTimes"><i class="li-github"></i>Menes</a>
+      <p>&copy; 2024 Triviosa. All rights reserved.</p>
     </div>
   </footer>
   
-</body>
+
+
+  <script>src="https://cdn.jsdelivr.net/npm/jquery@3."
