--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,16 +5,16 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /**height: 100vh;**/
-    margin: 0;
+    
     background-image: url('/assets/mainbg.png');
     background-size: cover;
     
 }
+.linkHead {
+    font-size: 20px;
+    color: whitesmoke;
 
+}
 :root {
     --primary-color: #1E3A8A; /* Deep Blue */
     --secondary-color: #F97316; /* Warm Orange */
@@ -31,7 +31,7 @@ body {
 
 .pacifico-regular {
     font-family: "Pacifico", cursive;
-    font-weight: 200;
+    font-weight: 150;
     font-style: normal;
   }
   
@@ -39,11 +39,10 @@ body {
 label[for] {
     width: 100%;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 30px;
     font-family: "DM Sans", sans-serif;
     color: #ffffff;
-    display: block;
-    padding: 10px;
+    display: block;    
     margin-bottom: 2px;
     text-align: center;
 }
@@ -79,7 +78,7 @@ label[for] {
     border-radius: 10px ;
     margin: 10px;
     padding: 10px;
-    margin-top: 300px; 
+     
 
 }
 
@@ -91,9 +90,10 @@ p{
     border-radius: 40px ;
     margin: 10px;
     padding: 10px;
-    margin-top: 300px; 
+    margin-top: 10px; 
 
 }
+
 
 
 
@@ -108,6 +108,7 @@ p{
 #quizTitle{
     font-size: 100px;
     text-align: center;
+    display: none;
 }
 
 h1 {
@@ -123,7 +124,7 @@ h1 {
     animation: shine 3s infinite;
     background-size: 200%;
     background-position: left;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
     
     /**-webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: rgb(0, 0, 0); **/
@@ -135,16 +136,12 @@ h1 {
    
   }
 h2 {
-   font-weight: bold;
-  color: white;
+     font-weight: bold;
+    color: white;
    -webkit-background-clip:text;
     font-size: 100px;
     font-family: "Pacifico", cursive;
     text-align: center;
-
-
-
-
 }
 
 
@@ -155,11 +152,10 @@ h2 {
 }
 
 #quizForm {
-
     background-image: url('/assets/formbg.png');
     background-size: cover;
     border: 1px solid var(--border-color);
-    padding: 50px;
+    padding: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
     border-radius: 50px;
     
@@ -249,7 +245,7 @@ select:hover{
     transform: translate(-50%, -50%);
     width: 80%;
     max-width: 1200px;
-    height: 1000px;
+    height: 100%;
     background-image: url('/assets/patterns1.png');
     background-size: cover;
     background-color: var(--primary-color);
