--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{!< main}} <!-- Extend the main layout -->
-
+<body>
   <div class="grid-container">
-    
+    <h1 id="quizTitle" class="text-center">Triviosa!</h1>
 
     <!-- Quiz form -->
     <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
@@ -66,6 +66,6 @@
     </div>
   </footer>
   
-
+</body>
 
   <script>src="https://cdn.jsdelivr.net/npm/jquery@3."
