--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,14 @@
-<h2>Triviosa!</h2>
-<div style="justify-content: center; width:100%; height:10px; margin:auto; justify-content:center; ">
-    <form class="login-form">
-        <div class="card" style=
-        "background-color: #6f7e83;
-        text-align: center;
-            background-image: url('/assets/patterns1.png');
-            color: white;
-            margin-bottom: 10px;
-            font-size: 5px;
+<form class="log-in-form">
+  <h4 class="text-center">Log in with you email account</h4>
+  <label for = 'email'>Email
+    <input type="email" placeholder="somebody@example.com">
+  </label>
+  <label for ='password'>Password
+    <input type="password" placeholder="Password">
+  </label>
+  
+  <p><input type="submit" class="button expanded" value="Log in"></input></p>
+  
+</form>
 
-        ">
 
-            <div class="card-header" style="
-            text-align: center;
-            background-image: url('/assets/exitbg.png');
-            color: white;
-            margin-bottom: 1px;
-            font-size: 20px;
-      ">
-                <p>Login</p>
-            </div>
-            <div class="card-body" style="font-size: 5px;">
-                <label for="email-login">username:</label>
-                <div style="margin-bottom: 5px; margin-top: 5px">
-                    <input type="text" id="email-login" style="width: 100%" />
-                </div>
-                <label for="password-login">password:</label>
-                <div style="margin-bottom: 5px; margin-top: 5px">
-                    <input type="password" id="password-login" style="width: 100%" />
-                </div>
-                <div>
-                    <button style="width: 100%;" type="submit">Login</button>
-                    <div id="signup-action">
-                        <a href="/signup" style="color: black; text-decoration:none">Signup</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
-</div>
-<script src="/assets/js/login.js"></script>
