--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,50 +1,39 @@
 {{!< main}} <!-- Extend the main layout -->
-<body>
-  <div class="grid-container">
-    <h1 id="quizTitle" class="text-center">Triviosa!</h1>
+<div class="grid-container">
 
-    <!-- Quiz form -->
-    <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
-      <div class="cell medium-6 medium-offset-3">
-        <h2 class="pacifico-regular">Trivia Crafter</h2>
-        
-        <label for="categories">Categories
-          <select name="categories" id="categories" class="input-group-field">
-            <option value="0">Random</option>
-            <!-- Add more categories as needed -->
-          </select>
-        </label>
-        
-        <label for="difficulty">Difficulty
-          <select name="difficulty" id="difficulty" class="input-group-field">
-            <option value="0">Random</option>
-            <option value="easy">Easy</option>
-            <option value="medium">Medium</option>
-            <option value="hard">Hard</option>
-          </select>
-        </label>
-        
-        <label for="type">Type
-          <select name="type" id="type" class="input-group-field">
-            <option value="0">Random</option>
-            <option value="multiple">Multiple Choice</option>
-            <option value="boolean">True or False</option>
-          </select>
-        </label>
-        
-        <button type="submit" class="button expanded">Create Quiz</button>
-      </div>
-    </form>
-
-    <!-- Overlay for darkening background -->
-    <div id="overlay" class="overlay" style="display:none;"></div>
-
-    <!-- Quiz modal where questions and results will be displayed -->
-    <div id="quizContainer" class="quiz-modal" style="display:none;">
-      <!-- Quiz content will be dynamically added here -->
+  <!-- Quiz form -->
+  <form id="quizForm" action="/submit" method="POST" class="grid-x grid-padding-x">
+    <div class="cell medium-6 medium-offset-3">
+      <h2 class="pacifico-regular text-center">Trivia Crafter</h2>
+      
+      <label for="categories">Categories
+        <select name="categories" id="categories" class="input-group-field">
+          <option value="0">Random</option>
+          <!-- Add more categories as needed -->
+        </select>
+      </label>
+      
+      <label for="difficulty">Difficulty
+        <select name="difficulty" id="difficulty" class="input-group-field">
+          <option value="0">Random</option>
+          <option value="easy">Easy</option>
+          <option value="medium">Medium</option>
+          <option value="hard">Hard</option>
+        </select>
+      </label>
+      
+      <label for="type">Type
+        <select name="type" id="type" class="input-group-field">
+          <option value="0">Random</option>
+          <option value="multiple">Multiple Choice</option>
+          <option value="boolean">True or False</option>
+        </select>
+      </label>
+      
+      <button type="submit" class="button expanded">Create Quiz</button>
     </div>
+  </form>
 
-<<<<<<< HEAD
   <!-- Overlay for darkening background -->
   <div id="overlay" class="overlay" style="display:none;"></div>
 
@@ -56,34 +45,11 @@
   <!-- Exit confirmation modal -->
   <div id="exitConfirmationModal" class="exit-modal" style="display:none;">
     <div class="modal-content">
-      <h3 id="exitConfirm">Exit Quiz</h3>
+      <h3>Exit Quiz</h3>
       <p>Are you sure you want to exit the quiz?</p>
       <button id="confirmExit" class="button alert">Yes</button>
       <button id="cancelExit" class="button secondary">No</button>
-=======
-    <!-- Exit confirmation modal -->
-    <div id="exitConfirmationModal" class="exit-modal" style="display:none;">
-      <div class="modal-content">
-        <h3>Exit Quiz</h3>
-        <p>Are you sure you want to exit the quiz?</p>
-        <button id="confirmExit" class="button alert">Yes</button>
-        <button id="cancelExit" class="button secondary">No</button>
-      </div>
->>>>>>> 8b450583debb9e45b4f777147b296008547e3278
     </div>
   </div>
-     
-  <footer>
-    <h2 id="profileSection"><a href="#profileSection">PROFILE</a></h2>
-    <div class="socialMedia">
-      <p class="follow">Follow Us</p>
-      <a href="https://github.com/drsaho"><i class="li-github"></i>Amadou</a>
-      <a href="https://github.com/barand14"><i class="li-github"></i>Balalomba</a>
-      <a href="https://github.com/EnduringTimes"><i class="li-github"></i>Menes</a>
-      <p>&copy; 2024 Triviosa. All rights reserved.</p>
-    </div>
-  </footer>
-  
-</body>
+</div>
 
-  <script>src="https://cdn.jsdelivr.net/npm/jquery@3."
