--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,25 @@
-<h2>This is the login page</h2>
-<div style="justify-content: center; width:90%; height:100%; margin:auto; justify-content:center; border:solid">
-    <form class="login-form">
-        <div class="card" style="background-color: #6f7e83;">
-            <div class="card-header" style="
-        background-color: rgb(97, 195, 210);
-        color: white;
-        padding: 10px;
-        margin-bottom: 10px;
-        font-size: 20px;
-      ">
-                <p>Login</p>
-            </div>
-            <div class="card-body" style="font-size: 20px;">
-                <label for="email-login">username:</label>
-                <div style="margin-bottom: 20px; margin-top: 20px">
-                    <input type="text" id="email-login" style="width: 100%" />
-                </div>
-                <label for="password-login">password:</label>
-                <div style="margin-bottom: 20px; margin-top: 20px">
-                    <input type="password" id="password-login" style="width: 100%" />
-                </div>
-                <div>
-                    <button style="width: 100%;" type="submit">Login</button>
-                    <div id="signup-action">
-                        <a href="/signup" style="color: black; text-decoration:none">Signup</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
+{{!< main}} <!-- Extend the main layout -->
+
+<div class="form-container login-form-container">
+  <form class="login-form card">
+    <div class="card-header">
+      <p>Login</p>
+    </div>
+    <div class="card-body">
+      <label for="email-login">Email:</label>
+      <div class="input-container">
+        <input type="email" id="email-login" class="input-field" />
+      </div>
+      <label for="password-login">Password:</label>
+      <div class="input-container">
+        <input type="password" id="password-login" class="input-field" />
+      </div>
+      <div class="button-container">
+        <button type="submit" class="button expanded">Login</button>
+      </div>
+      <div id="signup-action" class="text-center">
+        <a href="/signup">Signup</a>
+      </div>
+    </div>
+  </form>
 </div>
-<script src="/assets/js/login.js"></script>
